--- a/style/style.css
+++ b/style/style.css
@@ -7,9 +7,11 @@ td, th {
   text-align: center !important;
 }
 
-td {
-  width: 33%;
-}
-/*svg {
+svg {
   height: 150px;
-}*/
+}
+
+td.first-of-type, td:first-of-type > div {
+  height: 200px;
+  width: 250px;
+}
